# rviz_textured_sphere

./: CMakeLists.txt  LICENCE  README.md  package.xml  plugin_description.xml
include/rviz_textured_sphere/: sphere_display.h
launch/: demo.launch
ogre_media/: .rviz_textured_sphere.frag.swp  glsl120.program  rviz_textured_sphere.frag  rviz_textured_sphere.material  rviz_textured_sphere.vert
rviz_cfg/: rviz_textured_sphere.rviz
src/: sphere_display.cpp
